# enterpret-assignment

./: .env  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  tox.ini
commons/: logging.py  models.py
model_executor/: app.py  server.py
model_executor/config/: config.ini  config.py
model_executor/controllers/: health_check.py  insights.py
model_executor/logic/: insights.py  model_hoster.py  tenant_pipelines.py
model_executor/models/: models.py
model_executor/singleton/: singleton.py
model_hoster/: app.py  server.py
model_hoster/config/: config.ini  config.py
model_hoster/controllers/: prediction.py
model_hoster/logic/: process.py
model_hoster/models/: models.py
model_hoster/utils/: object_pool.py
model_management/: app.py  server.py
model_management/config/: config.py  gunicorn_config.py
model_management/controllers/: pipeline.py  tenant_pipelines.py
model_management/logic/: pipeline.py  tenant_pipelines.py
model_management/models/: models.py
model_management/singleton/: singleton.py
tests/: conftest.py
