[tool.poetry]
name = "Enterpret"
version = "1.0"
description = ""
authors = ["Nitin Bansal <nbansal688@gmail.com>"]
packages = [{ include = "model_hoster" }, { include = "model_management" }, { include = "model_executor" }]

[tool.poetry.dependencies]
python = "3.11.5"
dvc = {extras = ["s3"], version = "^3.21.1"}
pydantic = "^2.3.0"
pytest = "^7.4.2"
pydantic-settings = "^2.0.3"
fastapi = "^0.103.1"
gunicorn = "^21.2.0"
uvicorn = "^0.23.2"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^23.9.1"
coverage = "^7.3.1"
mypy = "^1.5.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
model_hoster = "model_hoster.server:execute"
model_executor = "model_executor.server:execute"
model_management = "model_management.server:execute"

[tool.black]
line-length = 99
target-version = ["py311"]

[tool.isort]
from_first = true
line_length = 99
multi_line_output = 3
include_trailing_comma = true

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "tests/*"]

[tools.coverage.report]
fail_under = 60
